<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csis3175.mobiledevelopmentproject.AddTransaction"
    android:clickable="true">

    <TextView
        android:text="@string/dataLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/dateLabelIncome"
        android:textSize="20sp"
        android:layout_below="@+id/expenseLabelBtn"
        android:layout_alignLeft="@+id/repeatLabel"
        android:layout_alignStart="@+id/repeatLabel" />

    <Button
        android:text="@string/addExpenseBtnText"
        android:layout_height="wrap_content"
        android:id="@+id/addExpense"
        android:background="@android:color/holo_green_dark"
        style="@style/Widget.AppCompat.Button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp" />

    <TextView
        android:text="@string/buttonLabelExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expenseLabelBtn"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/noteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noteLabel"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/noteText"
        android:layout_alignBottom="@+id/noteText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/catergoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoryLabel"
        android:textSize="20sp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/noteText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/amountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amountLabel"
        android:textSize="20sp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="false"
        android:layout_below="@+id/categoryLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:id="@+id/addPhotoButton"
        android:contentDescription="@string/contentAddPhotoDesc"
        android:layout_alignTop="@+id/addPhotoText"
        android:layout_alignLeft="@+id/categorySpinner"
        android:layout_alignStart="@+id/categorySpinner" />

    <TextView
        android:text="@string/addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addPhotoText"
        android:textSize="20sp"
        android:layout_marginTop="350dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/categorySpinner"
        android:layout_width="150sp"
        android:entries="@array/categories"
        android:layout_alignTop="@+id/categoryLabel"
        android:layout_alignLeft="@+id/noteText"
        android:layout_alignStart="@+id/noteText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/amountText"
        android:hint="@string/hintAmount"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/amountLabel"
        android:layout_alignBottom="@+id/amountLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="number|numberDecimal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/noteText"
        android:hint="@string/hintNote"
        android:layout_below="@+id/dateLabelIncome"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/dateHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateText"
        android:layout_alignBaseline="@+id/dateLabelIncome"
        android:layout_alignBottom="@+id/dateLabelIncome"
        android:layout_alignLeft="@+id/noteText"
        android:layout_alignStart="@+id/noteText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textSize="18sp" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/addPhotoButton"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="Income"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:id="@+id/radIncome"
            android:layout_below="@+id/amountText"
            android:layout_toRightOf="@+id/addPhotoText"
            android:layout_toEndOf="@+id/addPhotoText"
            android:gravity="left|center" />

        <RadioButton
            android:text="Expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radExpense"
            android:layout_below="@+id/amountText"
            android:layout_toRightOf="@+id/radIncome"
            android:layout_toEndOf="@+id/radIncome"
            android:layout_weight="0.06" />

    </RadioGroup>

</RelativeLayout>
